--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,133 @@
+html {
+  --blueDark: #1d3557;
+  --blueAccent: #457b9d;
+  --blueLight: #a8dadc;
+  --grayTint: #f1faee;
+  --red: #e63946;
+  --green: #33b07c;
+  --mint: #33a9b0;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-md {
+  font-weight: 600;
+}
+
+.font-light {
+  font-weight: 100;
+}
+
+.font-rg {
+  font-weight: 400;
+}
+
+.text-h1 {
+   font-size: 3.052rem;
+}
+
+.text-h2 {
+  font-size: 2.441rem;
+}
+
+.text-h3 {
+  font-size: 1.953rem;
+}
+
+.text-h4 {
+  font-size: 1.563rem;
+}
+
+.text-h5 {
+  font-size: 1.25rem;
+}
+
+.text-sm {
+  font-size: 0.8rem;
+}
+.text-48-600 {
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 54px;
+  letter-spacing: -0.019em;
+}
+
+
+.blueDark {
+  color: var(--blueDark);
+}
+
+.bg-blueDark{
+  background: var(--blueDark);
+}
+
+.blueLight {
+  color: var(--blueLight);
+}
+
+.bg-blueLight {
+  background: var(--blueLight);
+}
+
+.blueAccent {
+  color: var(--blueAccent);
+}
+
+.bg-blueAccent{
+  background: var(--blueAccent);
+}
+
+.grayTint {
+  color: var(--grayTint);
+}
+
+.bg-grayTint {
+  background: var(--grayTint);
+}
+
+.green {
+  color: var(--green);
+}
+
+.bg-green {
+  background: var(--green);
+}
+
+.mint {
+  color: var(--mint);
+}
+
+.bg-mint {
+  background: var(--mint);
+}
+
+.black {
+  color: #000;
+}
+.white {
+  color: #fff;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap");
+
 body {
   margin: 0;
-  background-color:#e2e8f0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: #e2e8f0;
+  font-family: "Nunito Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  line-height: 1.3;
+  font-size: 16px;
+}
+
+p {
+  margin-bottom: 1rem;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
