--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+
 html {
   --blueDark: #1d3557;
   --blueAccent: #457b9d;
@@ -24,29 +26,30 @@ html {
   font-weight: 400;
 }
 
-.text-h1 {
+.text-h1, h1 {
    font-size: 3.052rem;
 }
 
-.text-h2 {
+.text-h2, h2 {
   font-size: 2.441rem;
 }
 
-.text-h3 {
+.text-h3, h3 {
   font-size: 1.953rem;
 }
 
-.text-h4 {
+.text-h4, h4 {
   font-size: 1.563rem;
 }
 
-.text-h5 {
+.text-h5, h5 {
   font-size: 1.25rem;
 }
 
 .text-sm {
   font-size: 0.8rem;
 }
+
 .text-48-600 {
   font-weight: 600;
   font-size: 48px;
@@ -110,16 +113,15 @@ html {
   color: #fff;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap");
-
 body {
   margin: 0;
   background-color: #e2e8f0;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 400;
   line-height: 1.3;
+  letter-spacing: -0.019em;
   font-size: 16px;
 }
 
